--- a/flappy-bulk.html
+++ b/flappy-bulk.html
@@ -17,16 +17,16 @@
             -webkit-user-select: none;
             user-select: none;
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             justify-content: center;
             min-height: 100vh;
-            padding: 0;
+            padding-top: 15px;
         }
 
         #game-container {
             position: relative;
-            width: min(85vw, 900px);
-            height: min(75vh, 600px);
+            width: min(92vw, 1000px);
+            height: min(82vh, 700px);
             background: #000;
             border: 12px solid #9b30ff;
             border-radius: 20px;
@@ -254,12 +254,12 @@
 
         @media (max-width: 768px) {
             body {
-                padding: 20px 0;
+                padding-top: 10px;
             }
 
             #game-container {
-                width: 70vw;
-                height: 60vh;
+                width: 85vw;
+                height: 70vh;
                 border-width: 8px;
             }
 
@@ -278,12 +278,12 @@
 
         @media (max-width: 480px) {
             body {
-                padding: 30px 0;
+                padding-top: 10px;
             }
 
             #game-container {
-                width: 65vw;
-                height: 55vh;
+                width: 80vw;
+                height: 65vh;
                 border-width: 6px;
             }
 
