--- a/bulk-climb.html
+++ b/bulk-climb.html
@@ -256,7 +256,7 @@
             const viewSize = 500;
             camera = new THREE.OrthographicCamera(
                 -viewSize * aspect, viewSize * aspect,
-                viewSize, -viewSize,
+                viewSize, -viewSize + 60,
                 1, 1000
             );
             camera.position.z = 500;
@@ -605,7 +605,7 @@
             camera.left = -viewSize * aspect;
             camera.right = viewSize * aspect;
             camera.top = viewSize;
-            camera.bottom = -viewSize;
+            camera.bottom = -viewSize + 60;
             camera.updateProjectionMatrix();
 
             renderer.setSize(window.innerWidth, window.innerHeight);
