--- a/bulk-breaker.html
+++ b/bulk-breaker.html
@@ -243,7 +243,7 @@
 
             camera = new THREE.OrthographicCamera(
                 -400, 400,
-                500, -300,
+                500, -360,
                 1, 1000
             );
             camera.position.z = 500;
@@ -353,7 +353,7 @@
                 bulkModel.scale.set(scale, scale, scale);
 
                 // T-pose laying horizontal as paddle
-                bulkModel.rotation.z = Math.PI / 2; // Rotate 90 degrees
+                bulkModel.rotation.z = Math.PI; // Rotate 180 degrees
                 bulkModel.position.set(0, -180, 0);
 
                 scene.add(bulkModel);
