Bulk Climb: significantly reduce window count
Bulk Breaker: move paddle up 80px and flip orientation
- Reduced lit windows from 75% to 25%
- Moved paddle from y=-180 to y=-100
- Added rotation.x flip so feet face down
- Updated ball start position and collision boundaries
- Adjusted lost ball boundary

--- a/bulk-breaker.html
+++ b/bulk-breaker.html
@@ -297,7 +297,7 @@
                 roughness: 0.2
             });
             ball = new THREE.Mesh(ballGeometry, ballMaterial);
-            ball.position.set(0, -150, 0);
+            ball.position.set(0, -70, 0);
             scene.add(ball);
 
             ballVelocity = new THREE.Vector3(3, 4, 0);
@@ -354,7 +354,8 @@
 
                 // T-pose laying horizontal as paddle
                 bulkModel.rotation.z = Math.PI; // Rotate 180 degrees
-                bulkModel.position.set(0, -180, 0);
+                bulkModel.rotation.x = Math.PI; // Flip to face feet down
+                bulkModel.position.set(0, -100, 0);
 
                 scene.add(bulkModel);
                 paddle = bulkModel;
@@ -392,7 +393,7 @@
             targetPaddleX = 0;
 
             // Reset ball
-            ball.position.set(0, -150, 0);
+            ball.position.set(0, -70, 0);
             ballVelocity.set(3, 4, 0);
 
             // Recreate bricks
@@ -483,13 +484,13 @@
                 }
 
                 // Paddle collision
-                if (paddle && ball.position.y < -160 && ball.position.y > -190) {
+                if (paddle && ball.position.y < -80 && ball.position.y > -110) {
                     if (Math.abs(ball.position.x - paddle.position.x) < 80) {
                         ballVelocity.y *= -1;
                         // Add spin based on where ball hits paddle
                         const hitPos = (ball.position.x - paddle.position.x) / 80;
                         ballVelocity.x = hitPos * 5;
-                        ball.position.y = -160;
+                        ball.position.y = -80;
                     }
                 }
 
@@ -513,7 +514,7 @@
                 });
 
                 // Lost ball
-                if (ball.position.y < -210) {
+                if (ball.position.y < -130) {
                     lives--;
                     updateHUD();
 
@@ -521,7 +522,7 @@
                         endGame(false);
                     } else {
                         // Reset ball
-                        ball.position.set(0, -150, 0);
+                        ball.position.set(0, -70, 0);
                         ballVelocity.set(3, 4, 0);
                     }
                 }
